--- a/package.json
+++ b/package.json
@@ -190,7 +190,10 @@
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
     "react": "^15.5.4",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.5.4",
+    "react-dropzone": "^3.13.2",
     "react-hot-loader": "3.0.0-beta.6",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
@@ -198,7 +201,9 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "source-map-support": "^0.4.15"
+    "source-map-support": "^0.4.15",
+    "fluent-ffmpeg": "~2.1.2",
+    "ffbinaries": "^0.1.2"
   },
   "devEngines": {
     "node": ">=6.x",
