--- a/package.json
+++ b/package.json
@@ -187,6 +187,9 @@
   },
   "dependencies": {
     "electron-debug": "^1.1.0",
+    "electron-storage": "^1.0.7",
+    "ffbinaries": "^0.1.2",
+    "fluent-ffmpeg": "~2.1.2",
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
     "react": "^15.5.4",
@@ -201,9 +204,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "source-map-support": "^0.4.15",
-    "fluent-ffmpeg": "~2.1.2",
-    "ffbinaries": "^0.1.2"
+    "source-map-support": "^0.4.15"
   },
   "devEngines": {
     "node": ">=6.x",
