--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "browserslist": "electron 1.6",
   "build": {
-    "productName": "ElectronReact",
+    "productName": "Convex",
     "appId": "org.develar.ElectronReact",
     "files": [
       "dist/",
