--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "fluent-ffmpeg": "~2.1.2",
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
+    "materialize-css": "^0.98.2",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-shallow-compare": "^15.5.2",
