--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-selectize": "^2.1.0",
+    "react-tabtab": "^0.8.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "source-map-support": "^0.4.15"
