--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "fluent-ffmpeg": "~2.1.2",
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
+    "material-ui": "^0.18.4",
     "materialize-css": "^0.98.2",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
@@ -212,6 +213,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "react-selectize": "^2.1.0",
     "react-tabtab": "^0.8.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "source-map-support": "^0.4.15"
