--- a/package.json
+++ b/package.json
@@ -198,7 +198,8 @@
     "fluent-ffmpeg": "~2.1.2",
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
-    "material-ui": "^0.18.4",
+    "material-ui": "^0.18.7",
+    "material-ui-build": "github:mui-org/material-ui",
     "materialize-css": "^0.98.2",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
